# wav2graph

./: LICENSE  README.md  requirements.txt  run.sh  segment_WBC_nuclei.m
config/: link_inductive_learning.yaml  link_transductive_learning.yaml  link_transductive_learning_asr.yaml  node_inductive_learning.yaml  node_transductive_learning _asr.yaml  node_transductive_learning.yaml
core/: loader.py  metrics.py  model.py  utils.py
data/: kg_test.json  kg_test_withASR_WER28_8.json  kg_test_withASR_WER29_0.json
scripts/wav2graph/: link_inductive_learning.py  link_transductive_learning.py  node_inductive_learning.py  node_transductive_learning.py
test/BioMedKG-main/: README.md  dpi_modality.yaml  primekg_modality.yaml  pyproject.toml
test/BioMedKG-main/biomedkg/: data_module.py  factory.py  gcl_module.py  kge_module.py
test/BioMedKG-main/biomedkg/configs/: __init__.py  data.py  gcl.py  kge.py  node.py  train.py
test/BioMedKG-main/biomedkg/modules/: __init__.py  data.py  decoder.py  embed.py  encoder.py  fusion.py  gcl.py  metrics.py  node.py  utils.py
test/BioMedKG-main/scripts/: cross_val.py  get_embedding_from_ckpt.py  get_modality_embedding.py  train_gcl.py  train_kge.py
